# CppDatabase

./: .gitignore  CMakeLists.txt  main.cpp  sketch.md
b_tree/: CMakeLists.txt  node.cc
bp_tree/: CMakeLists.txt  bp_tree.cc  data.cc  data_node.cc  db_io.cc  index_node.cc
db_stream/: CMakeLists.txt  db_stream.cc
includes/: db_stream.h  error.h  mem_core.h  result.h  serializable.h
includes/bp_tree/: bp_tree.h  data.h  data_node.h  db_io.h  index_node.h
includes/record/: record.h
includes/schema/: bp_tree_data.h  f_datetime.h  f_string.h  field.h  field_type.h  record.h  schema.h  table.h
includes/storage/: b_tree.h  storage_interface.h
includes/storage/b_tree/: bp_tree.h  db_stream.h  node.h
includes/storage/bp_tree/: bp_tree.h  data.h  data_node.h  db_io.h  dto.h  index_node.h
includes/stream/: db_stream.h
includes/test/: test_data.h  test_util.h
includes/type/: f_date.h  f_datetime.h  f_int.h  f_string.h  field_data.h  field_type.h  type.h  types.h
memory/: CMakeLists.txt  mem_core.cc
record/: CMakeLists.txt  record.cc
schema/: CMakeLists.txt  bp_tree_data.cpp  f_datetime.cc  f_string.cc  field.cpp  field_type.cc  record.cc  schema.cc
stream/: CMakeLists.txt  db_fstream.cc
tests/: CMakeLists.txt  bp_tree_test.cpp  db_io_test.cc  db_stream_test.cc  f_datetime_test.cc  f_string_test.cc  index_node_test.cpp  mem_core_test.cpp  record_test.cc  schema_test.cc  table_test.cpp  test_util.cc
tests/bp_tree/: bp_tree_test.cpp  data_node_test.cpp  data_test.cpp  db_io_test.cc  index_node_test.cpp  test_data.h
tests/schema/: data_test.cpp  record_test.cc  schema_test.cc  table_test.cpp
tests/type/: f_datetime_test.cc  f_int_test.cpp  f_string_test.cc
type/: CMakeLists.txt  f_date.cc  f_datetime.cc  f_int.cpp  f_string.cc  field_data.cc  field_type.cc  type.cc  types.cpp
